apps/kube-prometheus-stack/k8s-app.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: kube-prometheus-stack
    pod-security.kubernetes.io/enforce: privileged
  name: kube-prometheus-stack
spec:
  finalizers:
  - kubernetes

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kube-prometheus-stack-prometheus
  namespace: kube-prometheus-stack
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`prometheus.services.luke-domain.com`)
      priority: 10
      services:
        - name: kube-prometheus-stack-prometheus
          port: 9090

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kube-prometheus-stack-grafana
  namespace: kube-prometheus-stack
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`grafana.services.luke-domain.com`)
      priority: 10
      services:
        - name: kube-prometheus-stack-grafana
          port: 80

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kube-prometheus-stack-prometheus-http-route
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: kube-system
  hostnames:
    - "prometheus.services.luke-domain.com"
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-prometheus
          port: 9090

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kube-prometheus-stack-grafana-http-route
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: kube-system
  hostnames:
    - "grafana.services.luke-domain.com"
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-grafana
          port: 80
