apps/kube-prometheus-stack/k8s-ingress-route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kube-prometheus-stack-prometheus
  namespace: kube-prometheus-stack
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`prometheus.services.luke-domain.com`)
      priority: 10
      services:
        - name: kube-prometheus-stack-prometheus
          port: 9090

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kube-prometheus-stack-grafana
  namespace: kube-prometheus-stack
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`grafana.services.luke-domain.com`)
      priority: 10
      services:
        - name: kube-prometheus-stack-grafana
          port: 80
